# network-simple

./: .gitignore  .travis.yml  LICENSE  NEWS  PEOPLE  README.md  Setup.hs  cabal.project  changelog.md  default.nix  flake.nix  hs-overlay.nix  network-simple.cabal  nixpkgs.nix  pkg.nix  pkgs-overlay.nix  pkgs.nix  shell.nix
examples/: chat-tcp.hs  echo-tcp.hs
network-simple/: LICENSE  PEOPLE  README.md  default.nix  network-simple.cabal
network-simple-tls/: PEOPLE  README.md  changelog.md  default.nix  network-simple-tls.cabal
network-simple-tls/certs/: README.md  ca.example.com.crt  ca.example.com.key  client.example.com.crt  client.example.com.csr  client.example.com.key  server.example.com.crt  server.example.com.csr  server.example.com.key
network-simple-tls/examples/: https-client.hs  tls-echo.hs
network-simple-tls/src/Network/Simple/TCP/: TLS.hs
network-simple-ws/: README.md  changelog.md  default.nix  network-simple-ws.cabal
network-simple-ws/src/Network/Simple/: WS.hs
network-simple-wss/: LICENSE  README.md  changelog.md  default.nix  network-simple-wss.cabal
network-simple-wss/src/Network/Simple/: WSS.hs
network-simple/examples/: chat-tcp.hs
network-simple/src/Network/Simple/: Internal.hs
src/Network/Simple/: Internal.hs  TCP.hs
src/Network/Socket/Simple/: Internal.hs  TCP.hs
