name:                network-simple
version:             0.4.0.5
homepage:            https://github.com/k0001/network-simple
bug-reports:         https://github.com/k0001/network-simple/issues
license:             BSD3
license-file:        LICENSE
author:              Renzo Carbonara
maintainer:          renzocarbonaraλgmail.com
copyright:           Copyright (c) Renzo Carbonara 2013-2016
category:            Network
build-type:          Simple
cabal-version:       >=1.8
synopsis:            Simple network sockets usage patterns.
description:
  This module exports functions that abstract simple network socket
  usage patterns.
  .
  See the @changelog.md@ file in the source distribution to learn about any
  important changes between versions.
extra-source-files:
  changelog.md
  README.md
  PEOPLE
  examples/echo-tcp.hs
  examples/chat-tcp.hs


source-repository head
    type: git
    location: git://github.com/k0001/network-simple.git

library
  hs-source-dirs:    src
  exposed-modules:   Network.Simple.TCP
  other-modules:     Network.Simple.Internal
  build-depends:     base         (>=4.5 && < 5)
                   , network      (>=2.3 && <2.7)
                   , bytestring   (>=0.9.2.1 && <0.11)
                   , transformers (>=0.2 && <0.6)
                   , exceptions   (>=0.6 && <0.9)
