cabal-version:       2.4
name:                network-simple-tls
version:             0.4.1
synopsis:            Simple interface to TLS secured network sockets.
description:         Simple interface to TLS secured network sockets.
homepage:            https://hackage.haskell.org/package/network-simple-tls
bug-reports:         https://github.com/k0001/network-simple/issues
license:             BSD-3-Clause
license-file:        LICENSE
author:              Renzo Carbonara
maintainer:          renλren.zone
copyright:           Copyright (c) Renzo Carbonara 2013
category:            Network
build-type:          Simple
extra-source-files:  README.md PEOPLE changelog.md

source-repository head
    type: git
    location: https://github.com/k0001/network-simple
    subdir: network-simple-tls

library
  default-language:  Haskell2010
  hs-source-dirs:    src
  exposed-modules:   Network.Simple.TCP.TLS
  build-depends:     base >=4.5 && <5.0
                   , bytestring
                   , data-default
                   , network
                   , network-simple >=0.4.3
                   , safe-exceptions
                   , tls >=1.5
                   , tls-session-manager
                   , transformers
                   , x509
                   , x509-store
                   , x509-system
                   , x509-validation
  ghc-options:      -Wall -O2

