cabal-version:       2.4
name:                network-simple
version:             0.4.5
homepage:            https://hackage.haskell.org/package/network-simple
bug-reports:         https://github.com/k0001/network-simple/issues
license:             BSD-3-Clause
license-file:        LICENSE
author:              Renzo Carbonara
maintainer:          renλren.zone
copyright:           Copyright (c) Renzo Carbonara 2013
category:            Network
build-type:          Simple
synopsis:            Simple network sockets usage patterns.
description:
  This module exports functions that abstract simple network socket
  usage patterns.
  .
  See the @changelog.md@ file in the source distribution to learn about any
  important changes between versions.
extra-source-files:
  changelog.md
  README.md
  PEOPLE
  examples/echo-tcp.hs
  examples/chat-tcp.hs


source-repository head
    type: git
    location: https://github.com/k0001/network-simple
    subdir: network-simple

library
  default-language:  Haskell2010
  hs-source-dirs:    src
  exposed-modules:   Network.Simple.TCP
  other-modules:     Network.Simple.Internal
  build-depends:     base         (>=4.7 && < 5)
                   , network      (>=2.7)
                   , network-bsd  (>=2.7)
                   , bytestring
                   , transformers
                   , safe-exceptions
                   , socks
